UI: Fix overlap between search banner search results and nav container (#10)

--- a/scss/search-banner.scss
+++ b/scss/search-banner.scss
@@ -75,6 +75,9 @@
   .search-menu .searching .d-icon {
     color: var(--search-color);
   }
+  .panel-body {
+    z-index: z("dropdown");
+  }
   .results {
     background: var(--d-content-background);
   }
